# MemoryLane

./: .gitignore  index.html  package-lock.json  package.json
NextJs-GPT/: package-lock.json  package.json  tailwind.config.js
NextJs-GPT/src/: middleware.ts
NextJs-GPT/src/app/: globals.css  layout.tsx  page.tsx
NextJs-GPT/src/components/: Header.tsx  chatInput.tsx  chatMemoriesDropdown.tsx  chatWindow.tsx  header.tsx  memoryAddForm.tsx  newChat.tsx  sidebar.tsx  typingIndicator.tsx
NextJs-GPT/src/lib/: chatServices.ts
backend/ai-micro-service/: go.mod  go.sum  main.go  vectorizer.proto
backend/ai-micro-service/config/: gemini.go  mongo.go
backend/ai-micro-service/helperfuncs/: helperfuncs.go
backend/micro-service/: go.mod  go.sum  main.go
backend/vector-micro-service/: README.md  pyproject.toml  vectorizer.proto
backend/vector-micro-service/app/: chroma_client.py  main.py
backend/vector-micro-service/app/controllers/: health.py  routes.py
backend/vector-micro-service/app/models/: schema.py
backend/vector-micro-service/app/services/: vector_ops.py
backend/vector-micro-service/app/vectorizer/: vectorizer_pb2.py  vectorizer_pb2_grpc.py
backend/ws-micro-service/: go.mod  go.sum  main.go
chat-backend/: cron.js  index.js  package-lock.json  package.json  shutdown.js
chat-backend/db/: mongo.js
chat-backend/routes/: chatRoutes.js
chat-backend/schemas/: dbscheme.js
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: page.tsx  (+2 more)
src/app/: page.tsx
src/components/: chatWindow.tsx  typingIndicator.tsx
(+122 files in other folders)
